increased css z-index to go over the bootstrap nav top fixed

--- a/app/assets/stylesheets/public_tracker/report_button.css
+++ b/app/assets/stylesheets/public_tracker/report_button.css
@@ -5,7 +5,7 @@
     top:0;
     right:0;
     background:#c9f1ff;
-    z-index:100;
+    z-index:2000;
 }
 
 #public_tracker {
@@ -16,7 +16,7 @@
     right:0;
     background: #c9f1ff;
     border-radius: 5px;
-    z-index:100;
+    z-index:2000;
 }
 
 #public_tracker_window {
